# qsfdc_connector

./: CMakeLists.txt  README
lib/: CMakeLists.txt  qsql_sfdc.cpp  qsql_sfdc.h
main/: CMakeLists.txt  Makefile  sfdc.cpp
sfakonadi/: CMakeLists.txt  Makefile  Messages.sh  settings.kcfgc  sfdc.ui  sfdcresource.cpp  sfdcresource.desktop  sfdcresource.h  sfdcresource.kcfg
soap/: CMakeLists.txt  Makefile  api_version.xsl  forcewrapper.cpp  forcewrapper.h  s2qname_bugfix.patch
